<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Globale Strings -->
    <string name="app_name">AndroidMemory</string>

    <!-- TextViews -->
    <!-- Main -->
    <!-- PersonalStats -->
    <string name="tx_pers_stat_vorn">Vorname:</string>
    <string name="tx_pers_stat_nachn">Nachname:</string>
    <string name="tx_pers_stat_usern">Benutzername:</string>
    <string name="tx_pers_stat_lastgame">Letztes Spiel:</string>
    <string name="tx_pers_stat_lastgame_pkt">Punkte letztes Spiel:</string>
    <string name="tx_pers_stat_komplett_zeit">Gesamte Spielzeit:</string>
    <string name="tx_pers_stat_komplett_pkt">Punkte gesamt:</string>
    <string name="tx_pers_stat_kontrahent">Gegner im letzten Spiel:</string>
    <!-- CreateGame -->
    <string name="game_name_suggest">\'s Spiel</string>
    <string name="tx_create_game_name">Spiel Name</string>
    <string name="tx_create_size">Feldgröße</string>
    <string name="tx_create_game_max_players">Max. Spieler-Anzahl:</string>
    <string name="tx_create_game_password">Passwort:</string>
    <!-- Login -->
    <string name="tx_login_user">Benutzername:</string>
    <string name="tx_password_user">Passwort:</string>
    <!-- Register -->
    <string name="tx_register_pass">Passwort:</string>
    <string name="tx_register_pass_copy">Passwort wiederholen:</string>
    <string name="tx_register_usern">Benutzername:</string>
    <string name="tx_register_email">Email:</string>
    <!-- Lobby -->
    <!-- Lobby - Spieledetails -->
    <string name="tx_lobbychild_spielname">Spielname:</string>
    <string name="tx_lobbychild_spieler">Spieler:</string>
    <!-- CurrentScore -->


    <!-- EditTexts -->
    <!-- Main -->
    <!-- PersonalStats -->
    <!-- CreateGame -->
    <!-- Login -->
    <!-- Register -->
    <!-- Lobby -->
    <!-- CurrentScore -->


    <!-- Buttons -->
    <!-- Main -->
    <string name="btn_main_einzelspieler">Einzelspieler</string>
    <string name="btn_main_mehrspieler">Mehrspieler</string>
    <!-- PersonalStats -->
    <string name="btn_pers_stat_ok">Ok</string>
    <!-- CreateGame -->
    <string name="btn_create_game">Neues Spiel</string>
    <!-- Login -->
    <string name="btn_login_user">Einloggen</string>
    <!-- Register -->
    <string name="btn_register_registrieren">Registrieren</string>
    <string name="btn_register_abbrechen">Abbrechen</string>
    <!-- Lobby -->
    <string name="btn_lobby_beitreten">Beitreten</string>
    <string name="btn_lobby_erstellen">Erstellen</string>
    <!-- CurrentScore -->
    <string name="btn_currentscore_zurueck">Zurück</string>
    <string name="prg_loading">Lade&#8230;</string>
    
    <string name="tx_login">Login</string>
    <string name="tx_lobby">Lobby</string>
    <string name="tx_register">Registrieren</string>
    <string name="err_no_connection">Keine Netzwerkverbindung!</string>
    <string name="err_register_email_invalid">Ungültige E-Mail-Adresse!</string>
    <string name="err_register_empty_username">Bitte einen Benutzernamen eingeben!</string>
    <string name="err_register_empty_email">Bitte eine E-Mail-Adresse eingetragen!</string>
    <string name="err_register_empty_pass">Bitte ein Passwort vergeben!</string>
    <string name="err_register_passes_different">Bitte geben Sie zwei Mal das gleiche Passwort ein!</string>
    <string name="err_no_game">Kein Spiel ausgewählt!</string>
    <string name="err_creator_left">Der Spiel-Ersteller hat das Spiel verlassen.</string>
    
    
    <string name="tx_lobby_welcome">Herzlich Willkommen in der Memory-Lobby!</string>
    <string name="tx_lobby_recent_open_games">Derzeit offene Spiele:</string>
    <string name="tx_lobby_short_stats">Kurz-Statistik:</string>
    <string name="new_game">Neues Spiel</string>
    <string name="refresh">Aktualisieren</string>
    <string name="stats">Statistik</string>
    <string name="account">Account</string>
    
    <string name="gamelobby">Spiel-Lobby</string>
    <string name="gamelobby_leave_title">Spiel verlassen</string>
    <string name="gamelobby_leave_msg">Möchten Sie das Spiel wirklich verlassen?</string>
    <string name="gamelobby_leave_yes">Ja</string>
    <string name="gamelobby_leave_no">Nein</string>
    <string name="gamelobby_kick_tx">Hinauswerfen</string>
    <string name="gamelobby_player_kicked">Spieler wurde hinausgeworfen.</string>
    <string name="gamelobby_player_kick_failed">Spieler konnte nicht hinausgeworfen werden.</string>
    <string name="gamelobby_you_were_kicked">Sie wurden aus dem Spiel hinausgeworfen.</string>
    <string name="gamelobby_start_msg">Spiel startet...</string>
    
    <string name="gamelobby_max_players_tx">Max. Spieler: </string>
    
    <string name="dialog_join_private_title">Privates Spiel</string>
    <string name="dialog_join_private_msg">Passwort:</string>
    <string name="dialog_ok_txt">OK</string>
    <string name="dialog_cancel_txt">Abbrechen</string>
    
    <string name="game_start">Spiel starten</string>
    <string name="game_leave">Spiel verlassen</string>
    
    <string name="tx_won">Gewonnen: </string>
    <string name="tx_lost">Verloren: </string>
    <string name="ingame">Ingame</string>
    <string name="ingame_statistik">Statistik</string>
    <string name="ingame_verlassen">Spiel verlassen</string>
    <string name="ingame_skip">Spielzug aussetzen</string>
    <string name="ingame_leave_info">Zum Verlassen des Spiels über das Menü "Spiel verlassen" auswählen.</string>
    <string name="ingame_not_your_turn">Du bist noch nicht an der Reihe.</string>
    <string name="ingame_already_turned">Diese Karte ist bereits aufgedeckt.</string>
    <string name="ingame_my_turn">Du bist an der Reihe.</string>
    <string name="ingame_game_finished">Das Spiel ist beendet.</string>
    
    <string name="ingame_dialog_stats_title">Statistik</string>
    
    <!-- Lobby Statistik Dialog -->
    <string name="dialog_stats_title">Statistik</string>
	<string name="dialog_button_txt">OK</string>
	<string name="dialog_games_txt">Spiele</string>
	<string name="dialog_won_txt">Gewonnen</string>
	<string name="dialog_lost_txt">Verloren</string>
	<string name="dialog_ratio_txt">Verhältnis</string>
	<string name="dialog_pick_succ_txt">Paar gezogen</string>
	<string name="dialog_pick_fail_txt">Kein Paar gezogen</string>
	<string name="dialog_pick_ratio_txt">Verhältnis</string>
	
	<!-- Account Settings -->
	<string name="account_email_tx">E-Mail</string>
	<string name="account_oldpw_tx">altes Passwort</string>
	<string name="account_newpw_tx">neues Passwort</string>
	<string name="account_newpw2_tx">neues Passwort wiederholen</string>
	<string name="save">Speichern</string>
</resources>