<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_create_game_name" />
        <EditText
            android:id="@+id/ed_game_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
            <requestFocus />
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_create_size" />
        <Spinner
            android:id="@+id/spin_max_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_create_game_max_players" />
		
        <Spinner
            android:id="@+id/spin_max_players"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_create_game_password" />

        <EditText
            android:id="@+id/ed_game_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/btn_create_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_create_game"
            android:onClick="onButtonClick"
            android:src="@drawable/btn_create_game_scheme" />
    </LinearLayout>

</RelativeLayout>