<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:padding="10dp">
  	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
    	<TextView
    	    android:layout_height="wrap_content"
    	    android:layout_width="wrap_content"
    	    android:id="@+id/dialog_games_txt"
    	    android:text="@string/dialog_games_txt"
    	    android:layout_marginRight="25dp"/>

    	<TextView
    	    android:id="@+id/dialog_games_val"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="1dp"
    	    android:gravity="right"
    	    android:text="0" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="25dp">
    	<TextView
    	    android:layout_height="wrap_content"
    	    android:layout_width="wrap_content"
    	    android:id="@+id/dialog_won_txt"
    	    android:text="@string/dialog_won_txt"
    	    android:layout_marginRight="25dp"/>

    	<TextView
    	    android:id="@+id/dialog_won_val"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="1dp"
    	    android:gravity="right"
    	    android:text="0" />

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
    	<TextView
    	    android:layout_height="wrap_content"
    	    android:layout_width="wrap_content"
    	    android:id="@+id/dialog_lost_txt"
    	    android:text="@string/dialog_lost_txt"
    	    android:layout_marginRight="25dp" />

    	<TextView
    	    android:id="@+id/dialog_lost_val"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="1dp"
    	    android:gravity="right"
    	    android:text="0" />

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
    	<TextView
    	    android:layout_height="wrap_content"
    	    android:layout_width="wrap_content"
    	    android:id="@+id/dialog_ratio_txt"
    	    android:text="@string/dialog_ratio_txt"
    	    android:layout_marginRight="25dp" />

    	<TextView
    	    android:id="@+id/dialog_ratio_val"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="1dp"
    	    android:gravity="right"
    	    android:text="0" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
    	<TextView
    	    android:layout_height="wrap_content"
    	    android:layout_width="wrap_content"
    	    android:id="@+id/dialog_pick_succ_txt"
    	    android:text="@string/dialog_pick_succ_txt"
    	    android:layout_marginRight="25dp"/>

    	<TextView
    	    android:id="@+id/dialog_pick_succ_val"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="1dp"
    	    android:gravity="right"
    	    android:text="0" />

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
    	<TextView
    	    android:layout_height="wrap_content"
    	    android:layout_width="wrap_content"
    	    android:id="@+id/dialog_pick_fail_txt"
    	    android:text="@string/dialog_pick_fail_txt"
    	    android:layout_marginRight="25dp" />

    	<TextView
    	    android:id="@+id/dialog_pick_fail_val"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="1dp"
    	    android:gravity="right"
    	    android:text="0" />

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
    	<TextView
    	    android:layout_height="wrap_content"
    	    android:layout_width="wrap_content"
    	    android:id="@+id/dialog_pick_ratio_txt"
    	    android:text="@string/dialog_ratio_txt"
    	    android:layout_marginRight="25dp" />

    	<TextView
    	    android:id="@+id/dialog_pick_ratio_val"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="1dp"
    	    android:gravity="right"
    	    android:text="0" />

    </LinearLayout>
    
    <Button
        android:text="@string/dialog_button_txt"
        android:id="@+id/dialog_button_ok"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="onButtonClick" />
    
</LinearLayout>
