<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tx_login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:text="@string/tx_login_user"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/ed_login_user"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tx_password_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:text="@string/tx_password_user"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/ed_password_user"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:inputType="text"
        android:password="true" />

    <ImageButton
        android:id="@+id/btn_login_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btn_login_user"
        android:onClick="onButtonClick"
        android:src="@drawable/btn_login_scheme" />

</LinearLayout>